subindo em meu ambiente

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,18 +4,17 @@ upstream backend_api {
 
 server {
     listen 80;
-    server_name _;   # aceita qualquer hostname/ip
+    server_name _;   
 
     root /var/www/cogniflow/dist;
     index index.html;
 
-    # ---- SERVE SPA ----
     location / {
         try_files $uri $uri/ /index.html;
     }
 
     # ---- PROXY PARA O BACKEND ----
-    location /api/ {
+    location / {
         proxy_pass http://backend_api/;
         proxy_http_version 1.1;
 
