--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,10 +6,10 @@ server {
     listen 80;
     server_name _;   
 
-    root /var/www/cogniflow/dist;
     index index.html;
 
-    location / {
+    location /app1/ {
+        root /CogniFlow-Front/mega-plate/dist;
         try_files $uri $uri/ /index.html;
     }
 
@@ -18,7 +18,6 @@ server {
         proxy_pass http://backend_api/;
         proxy_http_version 1.1;
 
-        # headers recomendados
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
