--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
     index index.html;
 
     location /app1/ {
-        root /CogniFlow-Front/mega-plate/dist;
+        root /var/www/html/dist;
         try_files $uri $uri/ /index.html;
     }
 
