--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app1:
     build:
-      context: ./Cogniflow-Front/CogniFlow-Front/mega-plate
+      context: ./
       dockerfile: Dockerfile
     ports:
       - "3001:80"
@@ -25,5 +25,5 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app1
-      - app2
+#      - app2
     restart: unless-stopped
